2006-10-17  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Revert to pre-intltool 0.35 method of using po/LINGUAS,
	but in a more forward-compatible way (po/LINGUAS format does not need
	reverting to pre-0.35 format); intltool 0.35 is not available in
	enough distributions for it to be worth using right now - no complaining!

	ALL_LINGUAS=`grep -v '^#' $srcdir/po/LINGUAS | sed -r ':a;N;$!ba;s/\n/ /g; s/[ ]+/ /g'`

2006-10-17  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.Burner/BurnerFormatList.cs: Fixed local
	variable resolution problem with the anonymous delegate

2006-10-17  Alp Toker  <alp@atoker.com>

	* dbus-sharp/dbus-sharp/IntrospectionSchema.cs:
	* dbus-sharp/dbus-sharp/UnixMonoTransport.cs:
	Removed. This dead code was being inadvertently compiled due to the
	wildcard in the makefile, causing the build to fail on old Mono
	releases.

2006-10-16  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/daap-sharp/*: updated from mono svn

2006-10-16  Aaron Bockover  <abock@gnome.org>

	Banshee 0.11.1 Released

2006-10-16  Aaron Bockover  <abock@gnome.org>
	
	* NEWS: Updated with 0.11.1 release notes

	* src/Banshee.Base/AudioCdRipper.cs: Fall back on ogg, mp3, and wav 
	profiles if no profile was configured before; friendly error if no 
	profile could be found at all
	
	* src/Banshee.Base/Globals.cs: Removed debugging writelines

	* src/Banshee.Base/Banshee.AudioProfiles/ProfileManager.cs: Added override
	for GetConfiguredActiveProfile to fall back on mimetypes for default
	configurations

	* src/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileComboBox.cs:
	Added mime type filtering

	* src/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileComboBoxConfigurable.cs:
	Load/save profiles

	* src/Banshee.Base/Banshee.Burner/BurnerSessionPreparer.cs:
	* src/Banshee.Base/BatchTranscoder.cs:
	* src/Banshee.Base/GstTranscoder.cs:
	* src/Banshee.Base/Transcoder.cs: Use new audio profile stuff
	